# fastapi-prac

./: .gitignore  README.md  pyproject.toml
fastapi_prac/: database.py  env_inform.py  main.py  models.py
fastapi_prac/domain/Comment/: comment_crud.py  comment_router.py  comment_schema.py
fastapi_prac/domain/Post/: post_crud.py  post_router.py  post_schema.py
fastapi_prac/domain/User/: user_crud.py  user_router.py  user_schema.py
