[tool.poetry]
name = "fastapi-prac"
version = "0.1.0"
description = ""
authors = ["dev-bong <qhddnjswo011@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_prac"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
